# casadi

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  index.html  params.json
casadi/core/: CMakeLists.txt  assertion.cpp  assertion.hpp  bilin.cpp  bilin.hpp  binary_mx.hpp  binary_mx_impl.hpp  binary_sx.hpp  bspline.cpp  bspline.hpp  calculus.hpp  callback.cpp  callback.hpp  callback_internal.cpp  callback_internal.hpp  casadi_calculus.hpp  casadi_call.cpp  casadi_call.hpp  casadi_common.hpp  casadi_find.cpp  casadi_find.hpp  casadi_limits.hpp  casadi_logger.hpp  casadi_math.hpp  casadi_misc.cpp  casadi_misc.hpp  code_generator.cpp  code_generator.hpp  concat.cpp  concat.hpp  conic.cpp  conic.hpp  conic_impl.hpp  constant_mx.cpp  constant_mx.hpp  constant_sx.hpp  dae_builder.cpp  dae_builder.hpp  determinant.cpp  determinant.hpp  (+140 more)
casadi/interfaces/: CMakeLists.txt
casadi/solvers/: bspline_interpolant.cpp  bspline_interpolant.hpp  collocation.cpp  collocation.hpp  implicit_to_nlp.cpp  implicit_to_nlp.hpp  linear_interpolant.cpp  linear_interpolant.hpp  linsol_ldl.cpp  linsol_ldl.hpp  linsol_qr.cpp  linsol_qr.hpp  lsqr.cpp  lsqr.hpp  newton.cpp  newton.hpp  qp_to_nlp.cpp  qp_to_nlp.hpp  runge_kutta.cpp  scpgen.cpp  scpgen.hpp  shell_compiler.cpp  sqpmethod.cpp  sqpmethod.hpp  symbolic_qr.cpp  symbolic_qr.hpp
cmake/: FindOCTAVE.cmake
cmake_modules/: casadi.pc.in
misc/: install_numpy.ps1
swig/: CMakeLists.txt  casadi.i  doc.i  doc_merged.i  internal.i
swig/octave/: CMakeLists.txt
swig/python/: CMakeLists.txt  find_installation_path.py
(+140 files in other folders)
